--- a/src/runner/Dockerfile
+++ b/src/runner/Dockerfile
@@ -1,9 +1,9 @@
-# Usa l'immagine Node.js 22 basata su Alpine come stage di build.
-# Node.js 22 è già incluso, quindi non è necessario installarlo nuovamente.
+# Use Node.js 22 Alpine image as a build stage.
+# Node.js 22 is already included, so no need to install it again.
 FROM node:22-alpine AS build-stage
 
-# Installa i tool di base e le shell usando apk.
-# Ho rimosso 'csh' e 'ksh' perché non sono disponibili nei repository Alpine.
+# Install basic tools and shells using apk.
+# Removed 'csh' and 'ksh' as they are not available in Alpine repositories.
 RUN apk add --no-cache \
     bash \
     zsh \
@@ -13,8 +13,8 @@ RUN apk add --no-cache \
     ca-certificates \
     git
 
-# Installa i linguaggi di scripting e gli ambienti di runtime usando apk.
-# Ho cambiato 'lua5.4' a 'lua' e 'R' a 'R' (il nome del pacchetto è R).
+# Install scripting languages and runtime environments using apk.
+# Changed 'lua5.4' to 'lua' and 'R' to 'R' (package name is R).
 RUN apk add --no-cache \
     python3 \
     py3-pip \
@@ -28,29 +28,29 @@ RUN apk add --no-cache \
     tcl \
     expect
 
-# Installa gli strumenti Node.js globali come TypeScript e ts-node.
+# Install global Node.js tools like TypeScript and ts-node.
 RUN npm install -g typescript ts-node
 
-# Imposta la directory di lavoro all'interno del container.
+# Set the working directory inside the container.
 WORKDIR /app
 
-# Copia i file package.json e package-lock.json per installare le dipendenze.
+# Copy package.json and package-lock.json files to install dependencies.
 COPY package*.json ./
 
-# Installa le dipendenze di Node.js.
+# Install Node.js dependencies.
 RUN npm install --production
 
-# Copia il resto del codice dell'applicazione nella directory di lavoro.
+# Copy the rest of the application code into the working directory.
 COPY . .
 
-# Imposta la variabile d'ambiente NODE_ENV per ottimizzazioni di produzione.
+# Set NODE_ENV environment variable for production optimizations.
 ENV NODE_ENV=production
 
-# Espone la porta 3000, che è la porta predefinita su cui l'applicazione runner Node.js ascolta.
-# Questo allinea il Dockerfile con la configurazione dell'orchestratore.
+# Expose port 3000, which is the default port the Node.js runner application listens on.
+# This aligns the Dockerfile with the orchestrator's configuration.
 EXPOSE 3000
 
-# Specifica il comando che verrà eseguito all'avvio del container.
-# Il percorso di 'runner.js' è stato corretto per riflettere la sua posizione all'interno
-# della directory di lavoro corrente (/app/src/runner/runner.js).
+# Specify the command that will be executed when the container starts.
+# The path to 'runner.js' has been corrected to reflect its location within
+# the current working directory (/app/runner.js).
 CMD [ "node", "runner.js" ]
