Refined support for java shebangs. You can now specify --source in the shebang.

--- a/src/runner/Dockerfile
+++ b/src/runner/Dockerfile
@@ -21,7 +21,7 @@ RUN apk add --no-cache \
     perl \
     ruby \
     php \
-    openjdk17-jre-headless \
+    openjdk21-jdk \
     lua \
     R \
     gawk \
