Dynamic port mapping has been implemented for the runner containers. By specifying a numeric value in the FREE_DOORS environment variable within the Compose file, a corresponding number of ports will be published on a 1:1 basis, ensuring flexibility and automatic network resource allocation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     environment:
       - NODE_ENV=production
       - REUSE_RUNNER_MODE=true
+      - FREE_DOORS=0 #max 20
     profiles: ["singletenant"]
     depends_on:
       runner-builder:
