--- a/src/runner/package.json
+++ b/src/runner/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "simple-git": "^3.28.0",
     "socket.io": "^4.8.1",
-    "taylored": "^5.1.0",
+    "taylo": "^7.0.16",
     "tmp": "^0.2.3"
   }
 }
